tests/models/struct/unnamed/i16/fail/validate.rs
use dade::{model, Result};
#[model]
struct TestModel (
   #[field(validate = validate_fn)]
    i16
);
fn main() {}
